@@ -26,4 +26,11 @@ OPTIONS=""
 #
 INITLOG=/dev/null
 
+#
+# Set this to 1 to cause '/etc/init.d/shorewall-lite stop' to place the firewall in
+# a safe state rather than to open it
+#
+
+SAFESTOP=0
+
 # EOF
