@@ -21,4 +21,16 @@ startup=0
 
 OPTIONS=""
 
+#
+# Init Log -- if /dev/null, use the STARTUP_LOG defined in shorewall.conf
+#
+INITLOG=/dev/null
+
+#
+# Set this to 1 to cause '/etc/init.d/shorewall6 stop' to place the firewall in
+# a safe state rather than to open it
+#
+
+SAFESTOP=0
+
 # EOF
